k8s/payment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: payment-worker
      role: worker
  template:
    metadata:
      labels:
        component: payment-worker
        role: worker
    spec:
      containers:
        - name: payment-worker
          image: user:latest
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          command: ["python"]
          args: ["workers/payment_worker.py"]
