k8s/stock-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: stock-worker
      role: worker
  template:
    metadata:
      labels:
        component: stock-worker
        role: worker
    spec:
      containers:
        - name: stock-worker
          image: stock:latest
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          command: ["python"]
          args: ["workers/stock_worker.py"]
