k8s/orchestrator-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator-service
spec:
  type: ClusterIP
  selector:
    app: orchestrator-service
  ports:
    - port: 5000
      name: http
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestrator-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orchestrator-service
  template:
    metadata:
      labels:
        app: orchestrator-service
    spec:
      containers:
        - name: orchestrator
          image: ttl.sh/dds26-1-orchestrator:24h
          imagePullPolicy: IfNotPresent
          command: ["gunicorn", "-b", "0.0.0.0:5000", "-w", "6", "--threads", "12", "-k", "gthread", "-c", "orchestrator/gunicorn.conf.py", "--timeout", "30", "--log-level=info", "orchestrator.app:app"]
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 15
