k8s/payment-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  type: ClusterIP
  selector:
    app: payment-service
  ports:
    - port: 5000
      name: http
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment
          image: ttl.sh/dds26-1-payment:24h
          imagePullPolicy: IfNotPresent
          command: ["gunicorn", "-b", "0.0.0.0:5000", "-w", "8", "-c", "gunicorn.conf.py", "--timeout", "30", "--log-level=info", "app:app"]
          resources:
            requests:
              cpu: "300m"
              memory: "256Mi"
            limits:
              cpu: "800m"
              memory: "1Gi"
          ports:
            - containerPort: 5000
