k8s/user-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: ClusterIP
  selector:
    component: user
  ports:
    - port: 5000
      name: http
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: user
  template:
    metadata:
      labels:
        component: user
    spec:
      containers:
        - name: user
          image: user:latest
          imagePullPolicy: Never
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "256Mi"
              cpu: "250m"
          command: ["gunicorn"]
          args: ["-b", "0.0.0.0:5000", "-w", "4", "--threads", "8", "--timeout", "30", "app:app"]
          ports:
            - containerPort: 5000
